--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ ul,li{list-style: none}
 a img,img{border: none}
 a{ text-decoration: none;}
 
-
+.develop{background:#fff;}
 .boxCon{width: 1004px; margin: 0 auto; overflow: hidden;}
 
 /**banner**/
