--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@ ul,li{list-style: none}
 a img,img{border: none}
 a{ text-decoration: none;}
 
+/**test 20160427 14:20**/
+
 .develop{background:#fff;}
 .boxCon{width: 1004px; margin: 0 auto; overflow: hidden;}
 
